fixed a bunch of sonar qq